--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,6 +165,7 @@ import smallLogo from '../assets/small_logo.png';
 				</div>
 				<div class="footer-links">
 					<a href="/privacy">Privacy Policy</a>
+					<a href="/terms">Terms of Service</a>
 				</div>
 			</div>
 			<div class="footer-bottom">
